--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "bootstrap": "^4.2.1",
+    "tachyons": "^4.11.1"
+  }
 }
